# codespaces-react-fork

./: .copilot-codeGeneration-instructions.md  .dockerignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  10-listen-on-ipv6-by-default.sh  15-local-resolvers.envsh  20-envsubst-on-templates.sh  30-tune-worker-processes.sh  CONTRIBUTORS.txt  DEVGUIDE.md  DOCKER.md  Dockerfile  Dockerfile.backend  FIREWALL_FIX_SUMMARY.md  LICENSE  NETWORK_TROUBLESHOOTING.md  README.md  REPOSITORY_STATUS_REPORT.md  SECURE_TRANSFER.md  SUPPORT.md  TASK_SUMMARY.md  docker-compose.yml  eslint.config.js  go.mod  index.html  jsconfig.json  k8s-deployment.yaml  main.go  main.js  nginx.conf  openai.js  package-lock.json  package.json  postcss.config.js  styleguide.md  tailwind.config.js  test-openai.js  test-openai.py  (+3 more)
.devcontainer/: devcontainer.json
.husky/: pre-commit
.patches/: 0001-chore-update-LICENSE-to-MIT-Andrey-Petrov-2008-2020.patch
.storybook/: main.js
branch-artifact/: README.txt  changes.patch  inner_example_changes.patch  package.json
build-installer/: README.md  copy_binaries.sh
cooking-agent/: Dockerfile  README.md  pyproject.toml  requirements.txt
cooking-agent/src/: agent.py  cli.py  mcp_server.py  model_client.py  recipes.py
docker/: README.md
docs/: API-Documentation.md  Deployment-Documentation.md  EDITOR_INTEGRATION.md  File-Explorer.md  GLOSSARY.md  Persmix-Documentation.md
nested/: index.html  nested.js
patches/: 0001-sample.patch
public/: manifest.json  service-worker.js
scripts/: apply-patches.sh  auto-commit.sh  commit-and-push.sh  (+7 more)
(+122 files in other folders)
