[project]
name = "cooking-agent"
version = "0.1.0"
description = "Interactive console application for recipe search and ingredient extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "rich",
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
cooking-cli = "src.cli:main"
